test/corpus/okvir.txt
==================
Prazen okvir
==================

{}

---

(datoteka
    (okvir))

==================
Stavek v okvirju
==================

{
    naj x = 42
}

---

(datoteka
    (okvir
        (inicializacija
            (ime)
            (stevilo))))
