test/corpus/prirejanje.txt
==================
Inicializacija
==================

naj čebelica = 1

---

(datoteka
    (inicializacija
        (ime)
        (stevilo)))

==================
Prirejanje
==================

x = 13

---

(datoteka
    (prirejanje
        (ime)
        (prireditveni_op)
        (stevilo)))

==================
Komentar
==================

# komentar

---

(datoteka
    (komentar))

